Unify text length, padding, gap. Fix grammar issues. Improve flow of sentences.

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -49,19 +49,18 @@
             <div class = "introText">
                 <h1>Currently...</h1>
                 <p>I am a 2nd year, undergraduate student at <span style = "color: blue;">Simon Fraser</span>
-                    <br><span style = "color: blue;">University</span>, studying for a bachelor's in <span style = "color: blue;">computer science</span> with a
-                    <br>minor in <span style = "color: blue;">business</span>.
+                    <br><span style = "color: blue;">University</span>, studying for a bachelor's in <span style = "color: blue;">computer science</span>
+                    <br>with a minor in <span style = "color: blue;">business</span>.
                 </p>
             </div>
         </div>
         <div class = "background">
             <div class = "backgroundText">
                 <h1>I come from a...</h1>
-                <p><span style = "color: blue;">Chinese</span> background, but I was born in <span style = "color: blue;">Canada</span>. 
-                    <br>I attended a private school in China until Grade 4,
-                    <br>then moved back and have been living in Canada since.
-                    <br>That's why I'm fully fluent in <span style = "color: blue;">English</span>, <span style = "color: blue;">Mandarin</span>, 
-                    <br>and <span style = "color: blue;">Cantonese</span>
+                <p><span style = "color: blue;">Chinese</span> background, but I was born in <span style = "color: blue;">Canada</span>. I attended
+                    <br>a private school in China until Grade 4, then moved back and 
+                    <br>have been living in Canada since. That's why I'm fully fluent in 
+                    <br><span style = "color: blue;">English</span>, <span style = "color: blue;">Mandarin</span>, and <span style = "color: blue;">Cantonese</span>.
                 </p>
             </div>
 
@@ -73,8 +72,8 @@
             <div class = "futureText">
                 <h1>In the future...</h1>
                 <p>I would like to pursue a career in 
-                <br><span style = "color: blue;">Software Development</span>, <span style = "color: blue;">Cyber
-                <br>Security</span>, or <span style = "color: blue;">Project Management</span>.
+                <br><span style = "color: blue;">Software Development</span>, <span style = "color: blue;">Cyber Security</span>, 
+                <br>or <span style = "color: blue;">Project Management</span>.
                 </p>
             </div>
         </div>
