--- a/chess.html
+++ b/chess.html
@@ -46,8 +46,7 @@
         <div class = "headerContent">
             <div class = "introChess">
                 <h1><span style = "color: blue">Chess</span></h1>
-                <h2>I was introduced to Chess in high school and I've 
-                <br>been hooked ever since.</h2>
+                <h2>I was introduced to Chess in high school and I've been hooked ever since.</h2>
 
                 <ul><h2>This page will display games I've played:
                 <li><span style = "color: blue">Title format:</span> (My Rating) vs (Opponent Rating) [(Mode)] (Game Review)</li>
