--- a/competitions.html
+++ b/competitions.html
@@ -51,10 +51,10 @@
             <h2>Date: Feb 2025</h2>
 
             <ul><strong><span style = "color: blue">Context:</span></strong>
-            <li><span style = "color: blue">SAP Concur</span> is a software company providing travel and
-            <br>expense management services to businesses.</li>
-            <li>My team and I are tasked to create a <span style = "color: blue">strategic plan</span> to 
-            <br>optimize SAP's core features and growth.</li>
+            <li><span style = "color: blue">SAP Concur</span> is a software company providing travel 
+            <br>and expense management services to businesses.</li>
+            <li>My team and I are tasked to create a <span style = "color: blue">strategic plan</span> 
+            <br>to optimize SAP's core features and growth.</li>
             </ul>
 
             <ul><strong><span style = "color: blue">Our Plan:</span></strong>
@@ -94,16 +94,16 @@
                 <img class = "enactusImage" src = "images/enactusImage.jpg" alt = "Group image for the Enactus Competition"/>
             </div>
             <div class = "rightEnactus">
-                <h1>Forward Vision Pitch
-                <br>Competition <span style = "color: blue">@Enactus</span>
+                <h1>Forward Vision Pitch Competition 
+                <br><span style = "color: blue">@Enactus</span>
                 </h1>
                 <h2>Date: Feb 2025</h2>
 
                 <ul><strong><span style = "color: blue">Context:</span></strong>
-                <li>Forward Vision is an ongoing mission aiming to 
-                <br>innovate and build towards <span style = "color: blue"> The 17 Goals of The United Nations</span>.</li>
-                <li>My team and I are tasked to create a <span style = "color: blue">unique product</span> 
-                <br>that pursues one of the 17 goals.</li>
+                <li>Forward Vision is an ongoing mission aiming to innovate 
+                <br>and build towards <span style = "color: blue"> The 17 Goals of The United Nations</span>.</li>
+                <li>My team and I are tasked to create a <span style = "color: blue">unique product</span> that 
+                <br>pursues at least one of the 17 goals.</li>
                 </ul>
 
                 <ul><strong><span style = "color: blue">Our Product:</span></strong>
