--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class = "introText">
             <h1>Hello! I'm <span style = "color: blue;">Nick</span></h1>
             <p>A Computer Science Student @ Simon Fraser University</p>
-            <p>Welcome to my page!</p>
             <p>Learn about me from the menu above.</p>
+            <p>Oh by the way, every icon or image is interactable!</p>
         </div>
     </main>
     
