--- a/photography.html
+++ b/photography.html
@@ -46,12 +46,12 @@
         <div class = "headerContent">
             <div class = "introPhotography">
                 <h1><span style = "color: blue">Photography</span></h1>
-                <h2>When I was 10, my dad found interest in photography and bought 
-                <br>a <span style = "color: blue">Canon EOS 550D</span>. Every now and then, he'd let me take photos, 
-                <br>planting in me a love for scenery.</h2>
+                <h2>When I was 10, my dad found interest in photography and bought a 
+                <br><span style = "color: blue">Canon EOS 550D</span>. Every now and then, he'd let me take photos, planting
+                <br>in me a love for scenery.</h2>
 
                 <h2>A few of my favourite photos will be displayed below:</h2>
-                <p>All photos taken with my cell phone</p>
+                <p>All photos were taken with my cell phone</p>
             </div>
             <a href = "https://drive.google.com/drive/folders/11A1i5bbHlNRmZ2ht9XCsdGO404n6DOIG?usp=drive_link" class = "photographyGoogleDrive" target = "_blank">
                 <img class = "iconGoogleDrivePhotography" src = "images/iconGoogleDrive.png" alt = "Google Drive icon linking to photography portfilio"/>
