--- a/projects.html
+++ b/projects.html
@@ -83,8 +83,8 @@
                 <img class = "userApp" src = "images/userAppImage.png" alt = "Image to illustrate the user info app in action"/>
             </div>
             <div class = "rightInfoApp">
-                <h1><span style = "color: blue">Python</span> User Information 
-                <br>Storage Program</h1>
+                <h1><span style = "color: blue">Python</span> User Information Storage
+                <br>Program</h1>
                 <h2>Date: May - June 2024</h2>
 
                 <ul><strong><span style = "color: blue">Background:</span></strong>
