Add a Hub to direct visitors to different web pages developed & add a copy of the LOL Draft web to the Hub.

--- a/PersonalWeb/aboutMe.html
+++ b/PersonalWeb/aboutMe.html
@@ -16,7 +16,7 @@
         </div>
 
         <nav class = "menu">
-            <a href = "index.html" class = "activeHome">Home</a>
+            <a href = "home.html" class = "activeHome">Home</a>
 
             <div class = "dropdownPerson">
                 <a href = "" class = "activePerson">Personal Activities</a>
