--- a/PersonalWeb/chess.html
+++ b/PersonalWeb/chess.html
@@ -16,7 +16,7 @@
         </div>
 
         <nav class = "menu">
-            <a href = "index.html" class = "activeHome">Home</a>
+            <a href = "home.html" class = "activeHome">Home</a>
 
             <div class = "dropdownPerson">
                 <a href = "" class = "activePerson">Personal Activities</a>
