--- a/PersonalWeb/home.html
+++ b/PersonalWeb/home.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Nick's Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesHome.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         </div>
 
         <nav class = "menu">
-            <a href = "index.html" class = "activeHome">Home</a>
+            <a href = "home.html" class = "activeHome">Home</a>
 
             <div class = "dropdownPerson">
                 <a href = "" class = "activePerson">Personal Activities</a>
