--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p class="description">Choose which site you'd like to visit:</p>
         
         <div style="text-align: center; margin: 30px 0;">
-            <a href="PersonalWeb/home.html" class="site-link">Personal Website</a>
+            <a href="PersonalWeb/index.html" class="site-link">Personal Website</a>
             <a href="PersonalProjects/index.html" class="site-link">LoL Drafter App</a>
         </div>
     </div>
