--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         
         <div style="text-align: center; margin: 30px 0;">
             <a href="PersonalWeb/index.html" class="site-link">Personal Website</a>
-            <a href="PersonalProjects/index.html" class="site-link">LoL Drafter App</a>
+            <a href="PersonalProjects/index.html" class="site-link">Nick's LoL Drafter</a>
+            <a href="https://easychart-omega.vercel.app/" class="site-link" target = "_blank">EasyChart</a>
         </div>
     </div>
 </body>
