--- a/PersonalWeb/competitions.html
+++ b/PersonalWeb/competitions.html
@@ -24,7 +24,7 @@
 <body>
     <header class = "navbar">
         <div class = "name">
-            <h1>Nick Ze Kun<br>Lei</h1>
+            <h1><a href="../index.html" aria-label="Back to Nick's Website Hub">Nick Ze Kun<br>Lei</a></h1>
         </div>
 
         <nav class = "menu">
