--- a/PersonalWeb/photography.html
+++ b/PersonalWeb/photography.html
@@ -24,6 +24,7 @@
 <body>
     <header class = "navbar">
         <div class = "name">
+            <a class="hub-button" href="../index.html" aria-label="Go to web hub" title="Go to Web Hub">Web Hub</a>
             <h1><a href="index.html" aria-label="Back to main page">Nick Ze Kun<br>Lei</a></h1>
         </div>
 
