Add responsive units for homepage

--- a/PersonalWeb/index.html
+++ b/PersonalWeb/index.html
@@ -68,7 +68,7 @@
             <p>A Computer Science Student @ Simon Fraser University</p>
             <p>Learn about me from the menu above.</p>
             <p>Oh by the way, every icon or image is interactable!</p>
-            <p style="font-size: 18px;">(PS: This page is not regularly updated, check my LinkedIn for my latest projects)</p>
+            <p style="font-size: clamp(6px, 1.56vw, 18px);">(PS: This page is not regularly updated, check my LinkedIn for my latest projects)</p>
         </div>
     </main>
     
