Modify homepage & chess page text

--- a/PersonalWeb/chess.html
+++ b/PersonalWeb/chess.html
@@ -66,7 +66,7 @@
                 <h1><span style = "color: blue">Chess</span></h1>
                 <h2>I was introduced to Chess in high school and I've been hooked ever since.</h2>
 
-                <ul><h2>This page will display games I've played:
+                <ul><h2>This page will display some games I've played:
                 <li><span style = "color: blue">Title format:</span> (My Rating) vs (Opponent Rating) [(Mode)] (Game Review)</li>
                     <li>My side is always on the bottom of the board</li>
                 </h2></ul>
