--- a/PersonalWeb/index.html
+++ b/PersonalWeb/index.html
@@ -68,7 +68,8 @@
             <p>A Computer Science Student @ Simon Fraser University</p>
             <p>Learn about me from the menu above.</p>
             <p>Oh by the way, every icon or image is interactable!</p>
-            <p style="font-size: clamp(6px, 1.56vw, 18px);">(PS: This page is not regularly updated, check my LinkedIn for my latest projects)</p>
+            <p style="font-size: clamp(12px, 0.9vw, 18px);">(PS: Please view on a computer for the best experience.)</p>
+            <p style="font-size: clamp(12px, 0.9vw, 18px);">(PS: This page is not regularly updated, check my LinkedIn for my latest projects.)</p>
         </div>
     </main>
     
