--- a/LoLDraftAppWeb/index.html
+++ b/LoLDraftAppWeb/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet" />
-    <link rel="icon" href="./src/public/favicon/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/public/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./src/public/favicon/favicon.ico" />
+    <link rel="icon" href="/src/public/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/public/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/public/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nick's LoL Drafter</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
