--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <p class="description">Choose which site you'd like to visit:</p>
         
         <div style="text-align: center; margin: 30px 0;">
-            <a href="PersonalWeb/" class="site-link">Personal Website</a>
-            <a href="LoLDraftAppWeb/" class="site-link">Nick's LoL Drafter (Incomplete)</a>
+            <a href="PersonalWeb/index.html" class="site-link">Personal Website</a>
+            <a href="LoLDraftAppWeb/dist/index.html" class="site-link">Nick's LoL Drafter (Incomplete)</a>
             <a href="https://easychart-omega.vercel.app/" class="site-link" target = "_blank">EasyChart</a>
         </div>
     </div>
