Fix icon display error & unify file format

--- a/LoLDraftAppWeb/index.html
+++ b/LoLDraftAppWeb/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet" />
-    <link rel="icon" href="/src/public/favicon/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/public/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/public/favicon/favicon.ico" />
+    <link rel="icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nick's LoL Drafter</title>
   </head>
