--- a/LolDraftAppWebDist/index.html
+++ b/LolDraftAppWebDist/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nick's LoL Drafter</title>
-    <script type="module" crossorigin src="./assets/main-RvVD6Fku.js"></script>
+    <script type="module" crossorigin src="./assets/main-Cmt_1lm6.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/main-B8hlgOZI.css">
   </head>
   <body>
