--- a/LolDraftAppWebDist/index.html
+++ b/LolDraftAppWebDist/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nick's LoL Drafter</title>
-    <script type="module" crossorigin src="./assets/main-fIJFO3Yz.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-B8hlgOZI.css">
+    <script type="module" crossorigin src="./assets/main-CFuiU5XN.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-xfBLJ6y9.css">
   </head>
   <body>
     <div id="root"></div>
