--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
         <div style="text-align: center; margin: 30px 0;">
             <a href="PersonalWeb/index.html" class="site-link">Personal Website</a>
-            <a href="LolDraftAppWebDist/index.html" class="site-link" target = "_blank">Nick's LoL Drafter (Patching)</a>
+            <a href="LolDraftAppWebDist/index.html" class="site-link">Nick's LoL Drafter (Patching)</a>
             <a href="https://easychart-omega.vercel.app/" class="site-link" target = "_blank">EasyChart</a>
         </div>
     </div>
