--- a/LolDraftAppWebDist/index.html
+++ b/LolDraftAppWebDist/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet" />
-    <link rel="icon" href="./favicon/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+    <link rel="icon" href="/LolDraftAppWebDist/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/LolDraftAppWebDist/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/LolDraftAppWebDist/favicon/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nick's LoL Drafter</title>
-    <script type="module" crossorigin src="./assets/main-Fk9JwJXe.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-xfBLJ6y9.css">
+    <script type="module" crossorigin src="/LolDraftAppWebDist/assets/main-B76oewf_.js"></script>
+    <link rel="stylesheet" crossorigin href="/LolDraftAppWebDist/assets/main-xfBLJ6y9.css">
   </head>
   <body>
     <div id="root"></div>
